# kalshi_arb

./: .gitignore  .mcp.json  CHANGELOG.md  EXAMPLE_STRATEGY_RESULTS.md  FEEDBACK_LOOP.md  LIVE_READY_CHECKLIST.md  MULTI_SYMBOL_RESULTS_20260117_211117.md  MULTI_SYMBOL_RESULTS_20260117_213138.md  Makefile  PARAM_OPTIMIZATION_20260117_180748.md  PARAM_OPTIMIZATION_20260117_191525.md  PRE_LIVE_CHECKLIST.md  README.md  README_BACKTEST_REAL.md  SMALL_SAMPLE_DEPLOYMENT.md  STRATEGIES.md  STRATEGY_RESULTS_20260117_173141.md  STRATEGY_RESULTS_20260117_174245.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  analyze_permutations.py  analyze_strategy_results.py  binance_mcp_server.py  cache.py  claude.md.bak  collect_kalshi_data.py  compare_strategies.py  config.py  config_test.py  diagnose.py  diagnose_filters.py  events.py  main.py  nohup.out  optimize_parameters.py  orchestrator.py  position_sizing.py  pyproject.toml  quick_backtest.py  run_agents.py  (+8 more)
agents/: __init__.py  arbitrage_detector.py  backtester.py  base.py  binance_websocket.py  coingecko_price_monitor.py  kalshi_historical.py  kalshi_monitor.py  kalshi_websocket.py  price_monitor.py  signal_aggregator.py  trader.py
