[project]
name = "arbitrage"
version = "0.1.0"
description = "Crypto-Kalshi arbitrage detection system with async agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
run-agents = "run_agents:main"
